Module new updates.

--- a/graphql_apq_plus.info.yml
+++ b/graphql_apq_plus.info.yml
@@ -1,6 +1,7 @@
 name: 'GraphQL APQ Plus'
 type: module
-description: 'Adds Apollo Automatic Persisted Queries handling for Drupal 11 GraphQL endpoints.'
+description: 'Apollo Automatic Persisted Queries (APQ) support for Drupal 11 with Redis-backed storage and admin UI.'
 core_version_requirement: ^11
 package: Custom
 version: 1.0.0
+configure: graphql_apq_plus.admin
