services file changes.

--- a/graphql_apq_plus.routing.yml
+++ b/graphql_apq_plus.routing.yml
@@ -1,7 +1,7 @@
 graphql_apq_plus.admin:
   path: '/admin/config/graphql/apq'
   defaults:
-    _controller: '\\Drupal\\graphql_apq_plus\\Controller\\ApqAdminController::overview'
+    _controller: '\Drupal\graphql_apq_plus\Controller\ApqAdminController::overview'
     _title: 'GraphQL APQ storage'
   requirements:
     _permission: 'administer graphql apq'
@@ -9,7 +9,7 @@ graphql_apq_plus.admin:
 graphql_apq_plus.delete:
   path: '/admin/config/graphql/apq/delete/{hash}'
   defaults:
-    _controller: '\\Drupal\\graphql_apq_plus\\Controller\\ApqAdminController::delete'
+    _controller: '\Drupal\graphql_apq_plus\Controller\ApqAdminController::delete'
   requirements:
     _permission: 'administer graphql apq'
   options:
